# picodvi

Pico-DVI-LCD-Code/01-DVI/: .gitignore  CMakeLists.txt
Pico-DVI-LCD-Code/01-DVI/apps/: CMakeLists.txt
Pico-DVI-LCD-Code/01-DVI/apps/gui_demo/: CMakeLists.txt  main.c
Pico-DVI-LCD-Code/01-DVI/apps/hello_dvi/: main.c
Pico-DVI-LCD-Code/01-DVI/assets/: testcard_400x240_rgb565.h
Pico-DVI-LCD-Code/01-DVI/include/: common_dvi_pin_configs.h
Pico-DVI-LCD-Code/01-DVI/libdvi/: CMakeLists.txt  dvi.c  dvi_timing.c  dvi_timing.h
Pico-DVI-LCD-Code/01-DVI/libgui/: GUI_Paint.c  GUI_Paint.h
Pico-DVI-LCD-Code/uf2/pico/: gui_demo.uf2  hello_dvi.uf2
Pico-DVI-LCD-Code/uf2/pico2/: gui_demo.uf2  hello_dvi.uf2
